--- a/templates/modules/api/model.hbs
+++ b/templates/modules/api/model.hbs
@@ -20,7 +20,7 @@ export const {{ pascalCase model }} = {{ pascalCase model }}DataInput.extend({
 export type {{ pascalCase model }}Input = z.input<typeof {{ pascalCase model }}Input>;
 export type {{ pascalCase model }}UpdateInput = z.input<typeof {{ pascalCase model }}UpdateInput>;
 export type {{ pascalCase model }}DataInput = z.input<typeof {{ pascalCase model }}DataInput>;
-export type {{ pascalCase model }} = z.output<typeof {{ pascalCase model }}DataInput> & { id: ID };
+export type {{ pascalCase model }} = z.output<typeof {{ pascalCase model }}>;
 export type {{ pascalCase model }}Filter = Filter<{{ pascalCase model }}DataInput>;
 export type {{ pascalCase model }}CreateResponse = CreateDataResponse;
 export type {{ pascalCase model }}UpdateResponse = UpdateDataResponse;
