--- a/templates/modules/api/service.hbs
+++ b/templates/modules/api/service.hbs
@@ -1,11 +1,11 @@
 import {
   {{ pascalCase model }},
-  {{ pascalCase model }}CreateResponse,
   {{ pascalCase model }}Filter,
   {{ pascalCase model }}Input,
-  {{ pascalCase model }}RemoveResponse,
   {{ pascalCase model }}UpdateInput,
-  {{ pascalCase model }}UpdateResponse
+  CreateResult,
+  UpdateResult,
+  RemoveResult
 } from "../models/index.js";
 import { Container, Pagination, PaginationOptions } from "@deboxsoft/module-core";
 
@@ -21,9 +21,9 @@ export const {{ constantCase model }}_SERVICE_KEY = "{{ kebabUpperCase  model }}
 export const get{{ pascalCase model }}Service = <S extends {{ pascalCase model }}Service = {{ pascalCase model }}Service>() => Container.get<S>({{ constantCase model }}_SERVICE_KEY);
 export const has{{ pascalCase model }}Service = () => Container.has({{ constantCase model }}_SERVICE_KEY);
 export interface {{ pascalCase model }}Service {
-  create(input: {{ pascalCase model }}Input): Promise<{{ pascalCase model }}CreateResponse>;
-  update(id: string, input: {{ pascalCase model }}UpdateInput): Promise<{{ pascalCase model }}UpdateResponse>;
-  remove(id: string): Promise<{{ pascalCase model }}RemoveResponse>;
+  create(input: {{ pascalCase model }}Input): Promise<CreateResult>;
+  update(id: string, input: {{ pascalCase model }}UpdateInput): Promise<UpdateResult>;
+  remove(id: string): Promise<RemoveResult>;
   findById(id: string): Promise<{{ pascalCase model }} | undefined>;
   find(filter?: Record<string, any>): Promise<{{ pascalCase model }}[]>;
   findPage(options?: PaginationOptions<{{ pascalCase model }}Filter>): Promise<Pagination<{{ pascalCase model }}>>;
