--- a/templates/modules/client/rest.hbs
+++ b/templates/modules/client/rest.hbs
@@ -6,11 +6,11 @@ import {
   {{ pascalCase model }}Error,
   {{ pascalCase model }}UpdateInput,
   {{ pascalCase model }}Filter,
-  {{ pascalCase model }}CreateResponse,
-  {{ pascalCase model }}UpdateResponse,
-  {{ pascalCase model }}RemoveResponse,
   {{ constantCase model }}_SERVICE_KEY,
   {{ pascalCase model }}Service,
+  CreateResult,
+  UpdateResult,
+  RemoveResult,
   getModuleApiRoute
 } from "@deboxsoft/{{ kebabCase projectName }}-api";
 
@@ -32,7 +32,7 @@ class {{ pascalCase model }}ServiceRest implements {{ pascalCase model }}Service
     this.fetchApi = fetchApi || getFetchApi();
   }
 
-  async create(input: {{ pascalCase model }}Input): Promise<{{ pascalCase model }}CreateResponse> {
+  async create(input: {{ pascalCase model }}Input): Promise<CreateResult> {
     try {
       const response = await this.fetchApi.post(this.apiPath, {
         json: input
@@ -40,28 +40,28 @@ class {{ pascalCase model }}ServiceRest implements {{ pascalCase model }}Service
       if (!response.ok) {
         throw new {{ pascalCase model }}Error({ message: response.statusText });
       }
-      return response.json<{{ pascalCase model }}CreateResponse>();
+      return response.json<CreateResult>();
     } catch (e) {
       this.logger.error(e);
       throw e;
     }
   }
 
-  async update(id: string, input: {{ pascalCase model }}UpdateInput): Promise<{{ pascalCase model }}UpdateResponse> {
+  async update(id: string, input: {{ pascalCase model }}UpdateInput): Promise<UpdateResult> {
     const response = await this.fetchApi.put(`${this.apiPath}/${id}`, { json: input });
     if (!response.ok) {
       throw new {{ pascalCase model }}Error({ message: response.statusText });
     }
-    return response.json<{{ pascalCase model }}UpdateResponse>();
+    return response.json<UpdateResult>();
   }
 
-  async remove(id: string): Promise<{{ pascalCase model }}RemoveResponse> {
+  async remove(id: string): Promise<RemoveResult> {
     const response = await this.fetchApi.delete(`${this.apiPath}/${id}`);
     if (!response.ok) {
       throw new {{ pascalCase model }}Error({ message: response.statusText });
     }
 
-    return response.json<{{ pascalCase model }}RemoveResponse>();
+    return response.json<RemoveResult>();
   }
 
   // @ts-ignore
