--- a/templates/modules/api/service.hbs
+++ b/templates/modules/api/service.hbs
@@ -6,7 +6,7 @@ import {
   CreateResult,
   UpdateResult,
   RemoveResult
-} from "../models/index.js";
+} from "../models";
 import { Container, Pagination, PaginationOptions } from "@deboxsoft/module-core";
 
 export const {{ pascalCase model }}Event = {
