--- a/templates/modules/api/error.hbs
+++ b/templates/modules/api/error.hbs
@@ -1,8 +1,4 @@
-import {
-  DbxError,
-  DbxErrorOptions,
-  ModuleConfig,
-} from "@deboxsoft/module-core";
+import { DbxError, DbxErrorOptions, ModuleConfig } from "@deboxsoft/module-core";
 
 export type {{ pascalCase model }}CodeMessageError = keyof typeof codeMessageDefault;
 type Options = DbxErrorOptions<{{ pascalCase model }}CodeMessageError> & {
