--- a/templates/modules/api/model.hbs
+++ b/templates/modules/api/model.hbs
@@ -1,8 +1,4 @@
-import {
-  z,
-  Filter,
-  IdSchema
-} from "@deboxsoft/module-core";
+import { z, Filter, IdSchema } from "@deboxsoft/module-core";
 
 export const {{ pascalCase model }}Input = z.object({
 });
