--- a/templates/modules/server/service.hbs
+++ b/templates/modules/server/service.hbs
@@ -19,8 +19,8 @@ import {
   {{ constantCase model }}_SERVICE_KEY
 } from "@deboxsoft/{{ camelCase  projectName }}-api";
 import { MQEmitter } from "mqemitter";
-import { get{{ pascalCase model }}Repo, {{ pascalCase model }}Repo } from "../db/index.js";
-import { {{ pascalCase  projectName }}ServerModuleConfig } from "../types.js";
+import { get{{ pascalCase model }}Repo, {{ pascalCase model }}Repo } from "../db";
+import { {{ pascalCase  projectName }}ServerModuleConfig } from "../types";
 
 export const create{{ pascalCase model }}ServiceServer = async (opts: {{ pascalCase  projectName }}ServerModuleConfig) => {
   const {{ camelCase model }}Repo = get{{ pascalCase model }}Repo();
